--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".homescreen.fragments.MyAccountFrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Account" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/union"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_32dp">
 
-</FrameLayout>
+    </ImageView>
+
+    <ImageButton
+        android:id="@+id/back_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+        android:layout_below="@id/image"
+        android:layout_margin="@dimen/margin_16dp"
+        android:background="@android:color/transparent">
+
+    </ImageButton>
+
+    <TextView
+        android:id="@+id/mesg_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_mesg"
+        android:layout_below="@id/image"
+        android:text="@string/mesg"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="@dimen/margin_16dp"
+        android:background="@android:color/transparent">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/myaccount"
+        android:textSize="@dimen/textsize_24sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/image"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:textColor="@color/gold">
+
+    </TextView>
+
+
+</RelativeLayout>
