--- a/app/src/main/res/layout/custom_eventservice.xml
+++ b/app/src/main/res/layout/custom_eventservice.xml
@@ -103,6 +103,7 @@
         android:backgroundTint="@color/gold"
         app:backgroundTint="@color/gold"
         android:text="@string/bookingservice"
+        android:textSize="@dimen/textsize_10sp"
         android:textAllCaps="false"
         android:layout_alignParentRight="true">
 
