--- a/app/src/main/res/layout/activity_event_services_screen.xml
+++ b/app/src/main/res/layout/activity_event_services_screen.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".homescreen.eventservicesscreen.EventServicesScreen">
 
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/union"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_32dp">
+        android:layout_marginTop="@dimen/margin_8dp">
 
     </ImageView>
 
     <ImageButton
-        android:id="@+id/back_bt"
+        android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
@@ -34,6 +35,7 @@
         android:drawableTop="@drawable/ic_offer"
         android:layout_below="@id/image"
         android:text="@string/offers"
+        android:visibility="gone"
         android:drawablePadding="5dp"
         android:gravity="center"
         android:textAlignment="center"
@@ -46,6 +48,7 @@
 
 
     <TextView
+        android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eventsservice"
@@ -57,11 +60,12 @@
 
     </TextView>
 
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyler_view"
+        android:id="@+id/recylerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/offer_bt"
+        android:layout_below="@id/type"
         android:background="@drawable/roundbt"
         android:layout_marginTop="5dp">
 
