--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,12 +6,64 @@
     android:layout_height="match_parent"
     tools:context=".homescreen.HomeScreen">
 
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/union"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_8dp">
+
+    </ImageView>
+
+    <ImageButton
+        android:id="@+id/search_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_search"
+        android:layout_below="@id/image"
+        android:layout_margin="@dimen/margin_16dp"
+        android:background="@android:color/transparent">
+
+    </ImageButton>
+
+    <TextView
+        android:id="@+id/offer_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_offer"
+        android:layout_below="@id/image"
+        android:text="@string/offers"
+        android:drawablePadding="5dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
+        android:background="@android:color/transparent">
+
+    </TextView>
+
+
+    <TextView
+        android:id="@+id/type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/textsize_24sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/image"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:textColor="@color/gold">
+
+    </TextView>
+
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="73dp"
+        android:layout_below="@id/offer_bt"
         android:backgroundTint="@android:color/transparent">
 
     </FrameLayout>
