--- a/app/src/main/res/layout/customevenetservices.xml
+++ b/app/src/main/res/layout/customevenetservices.xml
@@ -55,6 +55,7 @@
             android:background="@drawable/roundbt"
             app:backgroundTint="@color/gold"
             android:text="@string/select"
+            android:textSize="@dimen/textsize_10sp"
             android:textAllCaps="false"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginRight="@dimen/margin_16dp"
@@ -70,6 +71,7 @@
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
             android:text="@string/selectdate"
+            android:textSize="@dimen/textsize_10sp"
             android:textAllCaps="false"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginRight="@dimen/margin_16dp"
@@ -82,6 +84,7 @@
             android:id="@+id/select_time_bt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="@dimen/textsize_10sp"
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
             android:text="@string/selecttime"
