--- a/app/src/main/res/layout/offerdialog.xml
+++ b/app/src/main/res/layout/offerdialog.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/main5"
-    tools:context=".homescreen.fragments.HomePageFrag">
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:backgroundTint="@android:color/transparent">
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp">
+        android:layout_height="550dp"
+        android:nestedScrollingEnabled="true">
 
     </androidx.recyclerview.widget.RecyclerView>
-
 </RelativeLayout>
