--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="textsize_16sp">16sp</dimen>
     <dimen name="textsize_24sp">24sp</dimen>
     <dimen name="margin_80dp">80dp</dimen>
+    <dimen name="textsize_10sp">10sp</dimen>
 </resources>
