--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
         <!--       // <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>-->
         <!--        // <item name="android:buttonStyle">@style/RobotoButtonStyle</item>-->
     </style>
+
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/gold</item>
+    </style>
 </resources>
