--- a/app/src/main/res/layout/activity_sign_in_arabic.xml
+++ b/app/src/main/res/layout/activity_sign_in_arabic.xml
@@ -51,6 +51,7 @@
                 android:backgroundTint="@android:color/transparent"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/username"
+                android:gravity="right"
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -65,6 +66,7 @@
                 android:backgroundTint="@android:color/transparent"
                 android:layout_marginTop="@dimen/margin_16dp"
                 android:hint="@string/password"
+                android:textAlignment="textEnd"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
