--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_search"
         android:layout_below="@id/image"
+        android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/margin_16dp"
         android:background="@android:color/transparent">
 
