--- a/app/src/main/res/layout/bookingdetail_layout.xml
+++ b/app/src/main/res/layout/bookingdetail_layout.xml
@@ -10,6 +10,7 @@
     android:background="@drawable/background">
 
     <TextView
+        android:id="@+id/bookingdetailtv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bookingdetail"
