--- a/app/src/main/res/layout/fragment_my_account.xml
+++ b/app/src/main/res/layout/fragment_my_account.xml
@@ -65,7 +65,7 @@
                         android:padding="@dimen/margin_16dp"
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
-                        android:text="Edit"
+                        android:text="@string/edit"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -108,7 +108,7 @@
                         android:padding="@dimen/margin_16dp"
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
-                        android:text="Edit"
+                        android:text="@string/edit"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -151,7 +151,7 @@
                         android:padding="@dimen/margin_16dp"
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
-                        android:text="Edit"
+                        android:text="@string/edit"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -194,7 +194,7 @@
                         android:padding="@dimen/margin_16dp"
                         android:layout_centerVertical="true"
                         android:background="@android:color/transparent"
-                        android:text="Edit"
+                        android:text="@string/edit"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textsize_16sp"
                         android:textAllCaps="false"
@@ -225,7 +225,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/roundbt_fill"
                         app:backgroundTint="@color/gold"
-                        android:text="Cancel"
+                        android:text="@string/canceltext"
                         android:layout_margin="@dimen/margin_8dp"
                         android:textSize="@dimen/textsize_10sp"
                         android:textColor="@color/black"
@@ -242,7 +242,7 @@
                         android:textSize="@dimen/textsize_10sp"
                         android:background="@drawable/roundbt_fill"
                         app:backgroundTint="@color/gold"
-                        android:text="Save Edits"
+                        android:text="@string/saveedits"
                         android:layout_margin="@dimen/margin_8dp"
                         android:textColor="@color/black"
                         android:textAllCaps="false"
