--- a/app/src/main/res/layout/mybookinglayout_arabic.xml
+++ b/app/src/main/res/layout/mybookinglayout_arabic.xml
@@ -13,9 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/name"
+        android:gravity="right"
         android:textSize="@dimen/textsize_16sp"
-        android:layout_toLeftOf="@id/booking_edit"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/booking_edit"
+        android:layout_alignParentRight="true"
         android:textColor="@color/gold">
 
     </TextView>
@@ -28,10 +29,11 @@
         android:layout_height="wrap_content"
         android:text="@string/bookingstatus"
         android:layout_below="@id/booking_name"
+        android:gravity="right"
         android:textSize="@dimen/textsize_16sp"
         android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_toLeftOf="@id/booking_edit"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/booking_edit"
+        android:layout_alignParentRight="true"
         android:textColor="@color/white">
 
     </TextView>
@@ -42,9 +44,10 @@
         android:layout_height="wrap_content"
         android:text="@string/orderdetails"
         android:layout_marginTop="@dimen/margin_8dp"
+        android:gravity="right"
         android:layout_below="@id/booking_status"
-        android:layout_toLeftOf="@id/booking_edit"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/booking_edit"
+        android:layout_alignParentRight="true"
         android:textColor="@color/white">
 
     </TextView>
@@ -55,10 +58,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/booking_orderdetail"
         android:text="@string/bookingdate"
+        android:gravity="right"
         android:textSize="@dimen/textsize_16sp"
         android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_toLeftOf="@id/booking_edit"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/booking_edit"
+        android:layout_alignParentRight="true"
         android:textColor="@color/white">
 
     </TextView>
@@ -68,11 +72,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/booking_date"
+        android:gravity="right"
         android:text="@string/totalbill"
         android:textSize="@dimen/textsize_16sp"
         android:layout_marginTop="@dimen/margin_8dp"
-        android:layout_toLeftOf="@id/booking_edit"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@id/booking_edit"
+        android:layout_alignParentRight="true"
         android:textColor="@color/white">
 
     </TextView>
@@ -86,9 +91,9 @@
         android:textAllCaps="false"
         android:textSize="@dimen/textsize_10sp"
         app:backgroundTint="@color/gold"
-        android:layout_marginLeft="@dimen/margin_8dp"
+        android:layout_toRightOf="@dimen/margin_8dp"
         android:background="@drawable/roundbt_fill"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentLeft="true">
 
     </Button>
 
@@ -98,7 +103,7 @@
         android:layout_height="100dp"
         android:layout_below="@id/booking_edit"
         android:background="@drawable/roundbt"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="@dimen/margin_8dp"
         android:src="@drawable/ic_clock">
 
@@ -108,10 +113,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/clockbt"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:background="@android:color/transparent"
         android:drawableTop="@drawable/ic_mesg"
-        android:layout_marginRight="-15dp"
+        android:layout_marginLeft="-15dp"
         android:text="@string/startchat"
         android:textColor="@color/gold"
         android:layout_marginTop="@dimen/margin_8dp">
