--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,20 +5,20 @@
         android:id="@+id/home"
         android:enabled="true"
         android:icon="@drawable/ic_homepage"
-        android:title="Home Page"/>
+        android:title="@string/homepage"/>
 
     <item
         android:id="@+id/booking"
         android:icon="@drawable/ic_mybooking"
-        android:title="Booking"/>
+        android:title="@string/booking"/>
 
     <item
         android:id="@+id/Notifications"
         android:icon="@drawable/ic_notifications"
-        android:title="Notifications"/>
+        android:title="@string/notications"/>
 
     <item
         android:id="@+id/myaccount"
         android:icon="@drawable/ic_myaccount"
-        android:title="My Account"/>
+        android:title="@string/myaccount"/>
 </menu>
