--- a/app/src/main/res/layout/activity_event_services_screen.xml
+++ b/app/src/main/res/layout/activity_event_services_screen.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_back"
         android:layout_below="@id/image"
+        android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/margin_16dp"
         android:background="@android:color/transparent">
 
@@ -60,15 +61,63 @@
 
     </TextView>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recylerview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/type"
+        android:layout_below="@+id/type"
+        android:layout_margin="@dimen/margin_8dp"
+        android:padding="@dimen/margin_8dp"
         android:background="@drawable/roundbt"
-        android:layout_marginTop="5dp">
+        android:orientation="vertical">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+            android:id="@+id/salon_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/salonsname"
+            android:textSize="@dimen/textsize_16sp"
+            android:gravity="center"
+            android:textColor="@color/gold"
+            android:layout_margin="@dimen/margin_8dp">
+
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/reviewtv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/review"
+                android:textSize="@dimen/textsize_16sp"
+                android:gravity="center">
+
+            </TextView>
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:progressTint="@color/gold"
+                android:layout_marginLeft="5dp"
+                android:rating="3">
+
+            </RatingBar>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recylerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
+
+
 
 </RelativeLayout>
