--- a/app/src/main/res/layout/startbooking_dialog.xml
+++ b/app/src/main/res/layout/startbooking_dialog.xml
@@ -55,7 +55,7 @@
         android:id="@+id/offer_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Offer price"
+        android:text="@string/offerprice"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_below="@id/view1"
@@ -84,6 +84,7 @@
         android:gravity="start"
         android:layout_below="@id/view2"
         android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:textSize="@dimen/textsize_16sp"
         android:layout_marginBottom="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
@@ -97,9 +98,10 @@
         android:enabled="true"
         android:editable="false"
         android:focusable="false"
-        android:hint="DD/MM/YYYY"
+        android:hint="@string/dateformat"
         android:textColor="@color/gold"
         android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_below="@id/offer_date"
         android:backgroundTint="@android:color/transparent">
 
@@ -121,6 +123,7 @@
         android:text="@string/selectdate"
         android:textColor="@color/white"
         android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:gravity="start"
         android:layout_below="@id/view3"
         android:textSize="@dimen/textsize_16sp"
@@ -158,6 +161,7 @@
             app:backgroundTint="@color/gold"
             android:textSize="@dimen/textsize_10sp"
             android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
             android:text="@string/cancelbooking"
             android:textColor="@color/black"
             android:textAllCaps="false"
@@ -173,6 +177,7 @@
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
             android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:textSize="@dimen/textsize_10sp"
             android:text="@string/bookingconfirmation"
             android:textColor="@color/black"
