--- a/app/src/main/res/layout/bookingdetail_layout.xml
+++ b/app/src/main/res/layout/bookingdetail_layout.xml
@@ -35,6 +35,7 @@
         android:textColor="@color/gold"
         android:textSize="@dimen/textsize_16sp"
         android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
 
     </TextView>
@@ -44,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/servicetype"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
 
@@ -54,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/bookingdate"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
 
@@ -64,6 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/totalbill"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
 
@@ -73,6 +77,7 @@
         android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:text="@string/location"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
@@ -120,7 +125,7 @@
             app:backgroundTint="@color/gold"
             android:text="@string/cancel"
             android:textSize="@dimen/textsize_10sp"
-            android:layout_marginRight="4dp"
+            android:layout_margin="4dp"
             android:textColor="@color/black"
             android:textAllCaps="false"
             android:layout_marginTop="@dimen/margin_8dp">
@@ -136,7 +141,7 @@
             android:background="@drawable/roundbt_fill"
             app:backgroundTint="@color/gold"
             android:text="@string/bookingconfirmation"
-            android:layout_marginLeft="4dp"
+            android:layout_margin="4dp"
             android:textColor="@color/black"
             android:textAllCaps="false"
             android:layout_marginTop="@dimen/margin_8dp">
