--- a/app/src/main/res/layout/offerdetails_layout.xml
+++ b/app/src/main/res/layout/offerdetails_layout.xml
@@ -42,6 +42,7 @@
             android:textColor="@color/gold"
             android:textSize="@dimen/textsize_16sp"
             android:layout_marginLeft="@dimen/margin_16dp"
+            android:layout_marginRight="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_16dp">
 
         </TextView>
@@ -51,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/offerdetail"
+            android:layout_marginRight="@dimen/margin_16dp"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_16dp">
 
@@ -61,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/offerperiod"
+            android:layout_marginRight="@dimen/margin_16dp"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_16dp">
 
@@ -71,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/from"
+            android:layout_marginRight="@dimen/margin_16dp"
             android:layout_marginLeft="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_16dp">
 
@@ -117,6 +121,7 @@
         android:text="@string/location"
         android:layout_below="@id/view2"
         android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:layout_marginTop="@dimen/margin_16dp">
 
     </TextView>
